--- a/wp7-donor/Donor/EventEditPage.xaml
+++ b/wp7-donor/Donor/EventEditPage.xaml
@@ -102,7 +102,8 @@
                     <StackPanel Orientation="Horizontal">
                         <toolkit:DatePicker Width="250" Name="Date" 
 					Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
-                        <toolkit:TimePicker x:Name="Time"  Width="200" Value="{Binding Time, Mode=TwoWay}" Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
+                        <toolkit:TimePicker x:Name="Time"  Width="200" Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
+                        <!--Value="{Binding Time, Mode=TwoWay}" -->
                     </StackPanel>
                     <TextBlock Text="{Binding Place, Source={StaticResource Loc}}"
 			 Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
